--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,19 @@
   "version": "1.0.0",
   "author": " <artoria@artoria>",
   "license": "MIT",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "dev": "nodemon --exec tsx server.ts",
     "test": "echo \"Stupid Test\" && exit 1"
   },
   "devDependencies": {
-    "express": "^5.1.0"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.3.0",
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2"
   }
 }
