First Database serialization and following expressjs man page

--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "sqlite3": "^5.1.7"
   }
 }
