--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --exec tsx server.ts",
+    "dev": "npm run build --prefix ../client/ && nodemon --exec tsx server.ts",
     "test": "echo \"Stupid Test\" && exit 1"
   },
   "devDependencies": {
