updated scripts and server for better build routes

--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsc": "^2.0.4"
   }
 }
