--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -7,7 +7,6 @@
                 "skipLibCheck": true,
                 "esModuleInterop": true,
                 "allowSyntheticDefaultImports": true,
-
                 "moduleResolution": "bundler",
                 "allowImportingTsExtensions": true,
                 "verbatimModuleSyntax": true,
@@ -22,5 +21,7 @@
                 "noUncheckedSideEffectImports": true
         },
 
-        "include": ["server.ts"]
+        "include": ["server.ts"],
+
+        "exclude": ["node_modules"]
 }
