--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "socket.io-client": "^4.8.1",
     "vite3-plugin-express": "^0.1.10"
   },
   "devDependencies": {
