--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "multer": "^2.0.2",
+    "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "tsc": "^2.0.4"
   }
